fixed silly modal that didnt work on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -892,9 +892,9 @@ label .label-subtext {
 }
 @media(max-width:600px){
   .modal {
-    right: auto;
-    top: auto;
     bottom: auto;
+    left: 10px;
+    right: 10px;
   }
 }
 .modal > .content {
@@ -904,8 +904,7 @@ label .label-subtext {
    box-sizing: border-box;
    color: white;
    position: relative;
-   width: 500px;
-   max-width: 100vw;
+   max-width: 500px;
    padding: 20px;
  }
 
